Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1127,13 +1127,13 @@ section {
 
     .break-inside--avoid {
         break-inside: avoid-page;
-        display: block; /* Make element unbreakable for Safari */
+        display: inline-block; /* Make element unbreakable for Safari */
     }
 
     .card {
         box-shadow: none;
         break-inside: avoid-page;
-        display: grid; /* Make element unbreakable for Safari */
+        display: inline-block; /* Make element unbreakable for Safari */
         box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
